syntax = "proto3";

package client;

option go_package = "dfs/proto/client;client";

service ClientService {
  rpc CreateFile(CreateFileRequest) returns (CreateFileResponse);
  rpc WriteFile(WriteFileRequest) returns (WriteFileResponse);
  rpc ReadFile(ReadFileRequest) returns (ReadFileResponse);
  rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
}

message CreateFileRequest {
  string file_name = 1;
  int64 file_size = 2;
}

message CreateFileResponse {
  bool success = 1;
}

message WriteFileRequest {
  string file_name = 1;
  bytes data = 2;
}

message WriteFileResponse {
  bool success = 1;
}

message ReadFileRequest {
  string file_name = 1;
}

message ReadFileResponse {
  bytes data = 1;
}

message DeleteFileRequest {
  string file_name = 1;
}

message DeleteFileResponse {
  bool success = 1;
}
